# Proyecto_1_EDD_Mynor_Monzon_1S_2026

./: CMakeLists.txt  Makefile  ProyectoFase1  Proyecto_1  README.md  generador  generador.cpp  log.txt  main  main.cpp  main_pruebas.cpp  mil_productos.csv  productos.csv  productos_error.csv  prueba_grande.csv  veinte_correctos.csv
Carga/: CSVLoader.h
Catalogo/: Catalogo.cpp  Catalogo.h
Estructuras/: ArbolAVL.h  ArbolB.h  ArbolBPlus.h  ListaEnlazada.h  NodoArbolAVL.h  NodoArbolB.h  NodoArbolBPlus.h  NodoListaEnlazada.h  Pila.h  TablaHash.h
Graficos/: ReporteGraficos.cpp  ReporteGraficos.h
Modelo/: Producto.h
Reportes/: arbolB.dot  arbolBPlus.dot  arbolBPlus_ANTES.dot  arbolBPlus_despues.dot  arbolB_ANTES.dot  arbolB_despues.dot  avl.dot  avl_ANTES.dot  avl_DESPUES.dot  avl_despues.dot  avl_reporte.dot  b_reporte.dot  bplus_reporte.dot  hash_ANTES.dot  hash_despues.dot  hash_reporte.dot  tablaHash.dot
Utils/: Benchmark.h  Logger.h
include/: ArbolAVL.h  ArbolB.h  ArbolBPlus.h  CSVLoader.h  Catalogo.h  Logger.h  NodoArbolAVL.h  NodoArbolB.h  NodoArbolBPlus.h  NodoListaEnlazada.h  Producto.h  ReporteGraficos.h  TablaHash.h
src/: Catalogo.cpp  ReporteGraficos.cpp
